--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </header>
 
 
-        <section class="p-20">
+        <section class="p-10 md:p-20">
             <div class="card lg:card-side min-h-screen border justify-center">
                 <div class="hero-content flex-col lg:flex-row ">
                   <img
@@ -62,7 +62,7 @@
               </div>
         </section>
 
-        <section class="p-20">
+        <section class="p-10 md:p-20">
           <div class="card lg:card-side min-h-screen border justify-center">
               <div class="hero-content flex-col lg:flex-row ">
                 <img
@@ -86,7 +86,7 @@
       </section>
 
 
-      <section class="p-20">
+      <section class="p-10 md:p-20">
         <div class="card lg:card-side min-h-screen border justify-center">
             <div class="hero-content flex-col lg:flex-row ">
               <img
