--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-<style>
-  .body{
-    font-family: "Lexend", sans-serif;
-  }
-</style>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+     .body{
+        font-family: "Lexend", sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-white">
     <main>
-        <header class="sticky top-0 z-[10] ">
+        <header class="sticky top-0 z-[10] md:m-20 ">
             <nav>
                 <div class="navbar bg-white ">
                     <div class="navbar-start">
@@ -34,7 +33,7 @@
             </nav>
             <section class="text-center p-10 bg-white">
               <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20">Donation</button>
-              <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20">History</button>
+              <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20 mt-3">History</button>
           </section>
         </header>
 
@@ -109,5 +108,6 @@
           </div>
     </section>
     </main>
+    <script src="./java.js"></script>
 </body>
 </html>
