--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </nav>
 
             <section class="text-center p-10 bg-white">
-              <button id="donation-btn" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20">Donation</button>
-              <button id="history-btn" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20 mt-3">History</button>
+              <button id="donation-btn" class="btn btn-ghost btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20">Donation</button>
+              <button id="history-btn" class="btn btn-ghost btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-lime-300 text-black px-20 mt-3">History</button>
           </section>
         </header>
         <section id="history-show">
@@ -57,7 +57,7 @@
                     </p>
                     <input id="input-donation-money" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full  max-w-sx bg-white" />
                     <div>                    
-                    <button id="donation-1" class="btn btn-block mt-5 bg-lime-300 text-black">Donate Now</button>
+                    <button id="donation-1" class="btn btn-ghost btn-block mt-5 bg-lime-300 text-black">Donate Now</button>
                     </div>
                   </div>
                 </div>
@@ -80,7 +80,7 @@
                   </p>
                   <input id="input-donation-money2" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full  max-w-sx bg-white" />
                   <div>                    
-                  <button id="donation-2" class="btn btn-block mt-5 bg-lime-300 text-black">Donate Now</button>
+                  <button id="donation-2" class="btn btn-ghost btn-block mt-5 bg-lime-300 text-black">Donate Now</button>
                   </div>
                 </div>
               </div>
@@ -104,7 +104,7 @@
                 </p>
                 <input id="input-donation-money3" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full  max-w-sx bg-white" />
                 <div>                    
-                <button id="donation-3" class="btn btn-block mt-5 bg-lime-300 text-black">Donate Now</button>
+                <button id="donation-3" class="btn btn-ghost btn-block mt-5 bg-lime-300 text-black">Donate Now</button>
                 </div>
               </div>
             </div>
