--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="bg-white">
     <main>
-        <header class="sticky top-0 z-[10] md:m-20 ">
+        <header class="sticky top-0 z-[10] md:ml-20 md:mr-20 ">
             <nav>
                 <div class="navbar bg-white ">
                     <div class="navbar-start">
